--- a/imges/style.css
+++ b/imges/style.css
@@ -1,20 +1,74 @@
 body{
+    margin: 0px;
     font-family: 'Roboto', sans-serif;
 }
 h1{
     font-size: 50px ;
 }
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
 
-.name{
+.orange-highlight{
     color: orange;
 }
 
-.half-width{
-    width: 40%;
+.half-width{ 
+    width: 38%;
     float: left;
-    margin: 4%;
+    margin: 5%;
     padding-left: 2%;
+    background-color: white;
 }
 .half-width img{
     width: 100%;
+}
+.banner{
+    background-image: url("picture/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 150px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 20px ;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+
+}
+.dream-area{
+    background-image: url("picture/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px  gray;
+    border-radius: 10px;
+    height: 80%;
+}
+.experience{
+    background-image: url("picture/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: center left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,lightsalmon,tomato);
+    border-image-slice: 1;
+}
+#seo{
+    border-left: solid 7px;
+    border-image: linear-gradient(180deg, blue,cyan);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center ;
+    font-size: 12px;
 }
