--- a/imges/style.css
+++ b/imges/style.css
@@ -17,7 +17,7 @@ p{
 }
 
 .half-width{ 
-    width: 38%;
+    width: 37%;
     float: left;
     margin: 5%;
     padding-left: 2%;
@@ -46,7 +46,7 @@ section{
 .dream-area{
     background-image: url("picture/dream-bg.png");
     background-repeat: no-repeat;
-    background-position: right;
+    background-position:bottom  right;
 }
 .single-experience{
     box-shadow: 10px 10px 40px  gray;
@@ -59,16 +59,17 @@ section{
     background-position: center left;
 }
 #full-stack{
-    border-left: 7px solid;
-    border-image: linear-gradient(180deg,lightsalmon,tomato);
-    border-image-slice: 1;
-}
-#seo{
-    border-left: solid 7px;
+    border-left: solid 5px;
     border-image: linear-gradient(180deg, blue,cyan);
     border-image-slice: 1;
 }
+#seo{
+
+    border-left: 5px solid;
+    border-image: linear-gradient(180deg,lightsalmon,tomato);
+    border-image-slice: 1;
+}
 footer{
-    text-align: center ;
+    text-align: center;
     font-size: 12px;
 }
